[package]
name = "clucstr"
version = "0.1.7"
authors = ["Денис Котляров <#Ulin Project 18, denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluCStr.git"
edition = "2018"

license = "Apache-2.0"
readme = "README.md"

description = "Safe creation of 'CStr' with zero cost at a compilation stage with check of zero bytes and a possibility of communication of several values."
keywords = ["cstr", "clucstr", "create_cstr", "clucompany"]
categories = ["development-tools::ffi"]

[features]

[lib]
plugin = true

[dependencies]
