[package]
name = "clucstr"
version = "1.1.91"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluCStr.git"
edition = "2018"

license = "Apache-2.0"
readme = "README.md"

description = "Safe creation of “CStr” with zero cost at the compilation stage with checking for zero bytes and the ability to transfer multiple values."
keywords = ["cstr", "rust-plugin", "create_cstr", "clucompany"]
categories = ["development-tools::ffi"]

[features]

[lib]
plugin = true

[dependencies]
