[package]
name = "clucstr" # two names only because the box on crates.io cannot be renamed.
version = "1.2.0"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluCStr.git"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

description = "Safe and efficient creation of \"CStr\" with zero-byte checking and support for concatenating multiple values."
keywords = ["macro", "cstr", "no-std", "clucompany"]
categories = ["development-tools::ffi"]

[features]

[lib]
name = "cluCStr"
proc-macro = true

[dependencies]
quote = "1.0.36"
proc-macro2 = "1.0.81"
memchr = { version = "2.7.2", default-features = false }
